@@ -45,7 +45,7 @@ setup(
     },
     #  The following is somewhat flakey --
     dependency_links=["https://pypi.anaconda.org/OpenEye/simple#egg=OpenEye-toolkits-2020.2.0"],
-    install_requires=["mmcif >= 0.61", "rcsb.utils.io >= 0.97", "rcsb.utils.multiproc >= 0.18", "rcsb.utils.chem >= 0.56", "OpenEye-toolkits>=2020.2.0"],
+    install_requires=["mmcif >= 0.61", "rcsb.utils.io >= 0.97", "rcsb.utils.multiproc >= 0.18", "rcsb.utils.chem >= 0.57", "OpenEye-toolkits>=2020.2.0"],
     packages=find_packages(exclude=["rcsb.mock-data", "rcsb.utils.tests-chem", "rcsb.utils.tests-*", "tests.*"]),
     package_data={
         # If any package contains *.md or *.rst ...  files, include them:
