@@ -7,3 +7,4 @@
 31-Jan-2021 - V0.14 Create models for protomeric matches with unmapped protons, multiprocess model build workflow
  1-Feb-2021 - V0.15 Add assemble workflow and model relabeling to permit sequential public model identifiers.
  2-Feb-2021 - V0.16 Adjust mismatch reporting during build workflow, update dependencies, add assemble check method
+ 2-Feb-2021 - V0.17 Add working path to OeAlignUtils(), adjust check method, keep heavy atom only structures
